# AFAPI

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
dispatcher/: dispatcher.py
exceptions/: HTTPResponseExceptions.py
models/: HTTP.py
test_endpoints/: __init__.py  endpoints.py  schema.py
tests/: conftest.py
tests/test_dispatcher/: test_dispatcher.py
