[tool.poetry]
name = "afapi"
version = "0.0.1"
description = "Web framework for seting up endpoints easy af"
authors = ["Hubert <hkozacz@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.20.0"
pre-commit = "^2.21.0"
black = "^22.12.0"
isort = "^5.11.4"
flake8 = "6.0.0"
flake8-black = "0.3.6"
pytest = "^7.2.0"
trio = "^0.22.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
